# 2ip

./: .gitignore  2ip.code-workspace  CHANGELOG.md  LICENSE  README.ipynb  README.md  environment.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  twoip.code-workspace
.devcontainer/: devcontainer.json
.devcontainer/code/: .zshrc  Dockerfile
.devcontainer/code/scripts/: create.sh
.github/workflows/: codeql-analysis.yml  python-package-conda.yml
doc/: index.md  provider.ipynb  provider.md
examples/: country_code.py  geo.py  provider.py
extra/: 2ip.bash  2ip.fish  2ip.zsh
twoip/: __config__.py  __init__.py  __main__.py  __version__.py  cli.py  client.py  datatypes.py  http.py  log.py  logger.py  parameters.py  parser.py  request.py  twoip.py
twoip/cli/: ipparam.py  urlparam.py
twoip/constants/: api.py
twoip/dataclasses/: _common.py  provider.py  settings.py
twoip/datatypes/: apiresponse.py  base.py  baselist.py  baseresult.py  geo.py  geolist.py  georesult.py  provider.py  providerlist.py  providerresult.py  result.py
twoip/exceptions/: api.py  parser.py
twoip/methods/: __init__.py  geo.py  provider.py
twoip/validators/: url.py
