[tool.poetry]
name = "twoip"
description = "2IP API Client"
authors = ["Chris <git@gbe0.com>"]
version = "1.0.0"
readme = "README.md"
homepage = "https://github.com/python-modules/2ip"
repository = "https://github.com/python-modules/2ip"

[tool.poetry.dependencies]
# Python version required
python = "^3.10"

# Main requirements
dataclassy = "^1.0.1"
httpx = {extras = ["http2"], version = "^0.23.3"}
pydantic = "^1.10.4"
tabulate = "^0.9.0"

# For use with CLI scripts
click = {version = "^8.1.3", optional = true}
loguru = {version = "^0.6.0", optional = true}

# Optional requirements
autopep8 = {version = "^2.0.1", optional = true}
black = {version = "^23.1.0", optional = true}
Cython = {version = "^0.29.33", optional = true}
devtools = {extras = ["pygments"], version = "^0.10.0", optional = true}
flake8 = {version = "^6.0.0", optional = true}
ipython = {version = "^8.8.0", optional = true}
Markdown = {version = "^3.4.1", optional = true}
mypy = {version = "^1.1.1", optional = true}
pipenv = {version = "^2023.2.18", optional = true}
pycodestyle = {version = "^2.10.0", optional = true}
Pygments = {version = "^2.14", optional = true}
pylint = {version = "^2.15.10", optional = true}
requests = {version = "^2.28.2", optional = true}
rich = {version = "^13.1.0", optional = true}
types-tabulate = {version = "^0.9.0.1", optional = true}

# For Jupyter
ipykernel = {version = "^6.20.2", optional = true}
pandas = { version = "^1.5.2", optional = true, markers = "python_version >= '3.8'"}

[tool.poetry.dev-dependencies]
colorama = "^0.4.5"
ipy = "^1.1"
pytest = "^7.2.1"
pytest-html = "^3.1.1"
semgrep = "^1.9.0"

[tool.poetry.extras]
cli = [
  "click",
  "loguru",
]
jupyter = [
  "ipykernel",
  "pandas",
]
formatting = [
  "autopep8",
  "black",
  "flake8",
  "pycodestyle",
  "pylint",
]
vscode = [
  "colorlog",
  "Cython",
  "devtools",
  "ipython",
  "Markdown",
  "mypy",
  "pipenv",
  "Pygments",
  "requests",
  "rich",
  "types-tabulate",
]

[tool.poetry.scripts]
twoip = 'twoip.cli:cli'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.autopep8]
# Raise default maximum line length
max_line_length = 120

[flake8]
# Raise default maximum line length
max-line-length = 120